change md, add logs